fix overflow direction

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -13,5 +13,5 @@
 
 body {
     font-family: "Roboto", sans-serif;
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
